# hypercopy

./: .gitignore  Cargo.toml  config.example.toml
src/: config.rs  lib.rs  main.rs  types.rs
src/decision/: mod.rs
src/execute/: exchange.rs  mod.rs  signer.rs
src/ingest/: info.rs  mod.rs  ws.rs
src/positions/: mod.rs
