[package]
name = "hypercopy"
version = "0.1.0"
edition = "2021"
description = "Hyperliquid copy-trading bot — mirrors selected wallets via userFills WebSocket"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
rmp-serde = "1"

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

# EIP-712 signing for /exchange. alloy is the modern stack;
# swap to ethers-rs if you'd rather stay on the older ecosystem.
alloy-primitives = "0.8"
alloy-signer = "0.5"
alloy-signer-local = "0.5"
alloy-sol-types = "0.8"

[[bin]]
name = "hypercopy"
path = "src/main.rs"

[[bin]]
name = "approve-agent"
path = "src/bin/approve_agent.rs"

[[bin]]
name = "gen-keypair"
path = "src/bin/gen_keypair.rs"

[profile.release]
lto = "thin"
codegen-units = 1
